--- a/README
+++ b/README
@@ -1,15 +1,22 @@
 
+This is a super-thin wrapper around google-spreadsheet-ruby.
+Its a nascent project to monitor web applications directly to google spreadsheets.
+
+Warning:
+This idea isn't fully baked yet, and it won't work right out of the box.
+
+
 Install:
 git clone git://github.com/knowuh/gdocs_reporting.git
 rake install
 
-Usage:
+Sample Usage:
 require 'rubygems'
 require 'gdocs_reporting'
 GdocsReporting::WebReporter.run
 
 <answer prompts>
-
+you will want to look at, and possibly modify web_reporter.rb to suite you needs.
 
 
 TODO:
