--- a/README
+++ b/README
@@ -7,6 +7,7 @@ Unglamorous Video Demonstrating what this does:
 Warning:
 This idea isn't fully baked yet, and it won't work right out of the box.
 
+Half Baked Demo: http://bit.ly/guk04P
 
 Install:
 git clone git://github.com/knowuh/gdocs_reporting.git
